[package]
name = "nosleep-mac-sys"
description = "Block power save mode for macOS"
authors = ["Peter Evers"]
version = "0.2.0-rc.1"
edition = "2021"
rust-version = "1.57"
homepage = "https://github.com/pevers/nosleep-mac-sys"
repository = "https://github.com/pevers/nosleep-mac-sys"
license = "MIT"
keywords = ["nosleep", "powersave", "caffeine"]
readme = "README.md"

build = "build.rs"

[dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1.1"
snafu = "0.7.0"
nosleep-types = { path = "../nosleep-types", version = "0.2.0-rc.1" }

[build-dependencies]
cc = "1.0.73"