[package]
name = "nosleep-mac-sys"
description = "Block power save mode for macOS"
authors = ["Peter Evers"]
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/pevers/nosleep-mac-sys"
repository = "https://github.com/pevers/nosleep-mac-sys"
license = "MIT"
keywords = ["nosleep", "powersave", "caffeine", "prevent-sleep", "prevent-display-lock", "prevent-system-lock"]
readme = "README.md"

build = "build.rs"

[dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1.1"
snafu = "0.7.0"
nosleep-types = { path = "../nosleep-types", version = "0.3.0" }

[build-dependencies]
cc = "1.0.73"