[package]
name = "nosleep-nix"
description = "Block power save mode cross platform"
authors = ["Peter Evers"]
version = "0.2.0-rc.1"
edition = "2021"
rust-version = "1.57"
homepage = "https://github.com/pevers/nosleep"
repository = "https://github.com/pevers/nosleep"
license = "MIT"
keywords = ["nosleep", "powersave", "caffeine"]
readme = "README.md"

[dependencies]
nosleep-types = { path = "../nosleep-types", version = "0.2.0-rc.1" }
dbus = "0.9.5"
snafu = "0.7.0"
