[package]
name = "nosleep-nix"
description = "Block power save mode cross platform"
authors = ["Peter Evers"]
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/pevers/nosleep"
repository = "https://github.com/pevers/nosleep"
license = "MIT"
keywords = ["nosleep", "powersave", "caffeine", "prevent-sleep", "prevent-display-lock"]
readme = "README.md"

[dependencies]
nosleep-types = { path = "../nosleep-types", version = "0.3.0" }
dbus = "0.9.5"
