[package]
name = "nosleep-windows"
description = "Block power save mode cross platform"
authors = ["Peter Evers"]
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/pevers/nosleep"
repository = "https://github.com/pevers/nosleep"
license = "MIT"
keywords = ["nosleep", "powersave", "caffeine", "prevent-sleep", "prevent-display-lock"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nosleep-types = { path = "../nosleep-types", version = "0.3.0" }
snafu = "0.7.0"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_System_Threading"
]